Italicized link on landing page.

--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -16,7 +16,7 @@
         followed by
         <span style="text-decoration: underline;">the streamers you want to watch, separated by '&' characters</span>.
         <h3>Here's an example:</h3>
-        <a id="demo-link" href="<%= @example_link_href %>"><%= @example_link_href %></a>
+        <i><a id="demo-link" href="<%= @example_link_href %>"><%= @example_link_href %></a></i>
     </div>
     <div class="landing-buffer"></div>
 </div>
