Created the User model and began setting up views for the login modal.

--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -17,5 +17,6 @@
     </a>
     - <a id="theater_mode_toggle" class="pointer" title="Display only the main stream, with a shrunken chat panel.">Theater Mode</a>
     - <a id="hide_chat_toggle" class="pointer">Hide Chat</a>
+    - <a id="login">Login</a>
     - <%= link_to 'Help', help_path, target: '_blank' %>
 </div>
