--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -5,8 +5,6 @@
         twitchDeck.display = {
             // Variables
             streamers: {},
-            omitChat: "<%= ENV['OMIT_CHAT'] %>",
-            omitChatThreshold: <%= ENV['OMIT_CHAT_THRESHOLD'].to_i %>,
 
             // Functions
             initialize: function ( streamerJson ) {
@@ -68,13 +66,13 @@
 
                 // Swap a different chat window whenever the drop-down box changes.
                 $( '#chat-changer' ).change( function () {
-                    if ( twitchDeck.display.omitChat == 'true' && twitchDeck.display.streamers.length > twitchDeck.display.omitChatThreshold ) {
-                        $( '#backup_chat_link' ).attr( 'href', 'http://twitch.tv/' +
-                            $( '#chat-changer option:selected' ).text() + '/chat' );
-                    } else {
-                        $( '#chat-frame' )[ 0 ].src = 'https://twitch.tv/' +
-                            $( '#chat-changer option:selected' ).text() + '/chat';
-                    }
+                    window.history.pushState( null, "", "/loadChat" );
+                    $( '#chat-frame' )[ 0 ].src = 'https://twitch.tv/' +
+                        $( '#chat-changer option:selected' ).text() + '/chat';
+                    setTimeout( function () {
+                        window.history.pushState( null, "",
+                            ("/player/" + window.streamerNames).replace( /&amp;/g, '&' ) );
+                    }, 5000 );
                 } );
 
                 // Depending on the number of streamers selected, change the layout for optimal viewing.
@@ -192,11 +190,11 @@
                     // Re-organize streamer order based on online status, then by priority.
                     twitchDeck.display.streamers.sort( function ( leftObj, rightObj ) {
                         if ( leftObj.status === 'online' && rightObj.status === 'offline' ) {
-                            return - 1;
+                            return -1;
                         } else if ( leftObj.status === 'offline' && rightObj.status === 'online' ) {
                             return 1;
                         } else {
-                            return leftObj.priority < rightObj.priority ? - 1 : 1;
+                            return leftObj.priority < rightObj.priority ? -1 : 1;
                         }
                     } );
 
@@ -220,13 +218,10 @@
                 if ( $( 'iframe#main-stream-player' )[ 0 ].src !==
                     twitchDeck.display.getPlayerUrl( twitchDeck.display.streamers[ 0 ].name, false ) ) {
                     console.log( "Main streamer went offline. Loading a new main streamer." );
-                    $( '#main-stream-player' ).attr( 'src', twitchDeck.display.getPlayerUrl( twitchDeck.display.streamers[ 0 ].name, false ) );
-                    if ( twitchDeck.display.omitChat == 'true' && twitchDeck.display.streamers.length > twitchDeck.display.omitChatThreshold ) {
-                        $( '#backup_chat_link' ).attr( 'href', 'http://www.twitch.tv/' +
-                            twitchDeck.display.streamers[ 0 ].name + '/chat' );
-                    } else {
-                        $( '#chat-frame' ).attr( 'src', 'https://twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat' );
-                    }
+                    $( '#main-stream-player' ).attr( 'src',
+                        twitchDeck.display.getPlayerUrl( twitchDeck.display.streamers[ 0 ].name, false ) );
+                    $( '#chat-frame' ).attr( 'src',
+                        'https://twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat' );
                     streamsChanged = true;
                 }
 
@@ -237,7 +232,7 @@
                 if ( streamsChanged ) {
                     $.each( twitchDeck.display.streamers.slice( 1 ), function ( position, streamer ) {
                         if ( iframes[ position ].src !== twitchDeck.display.getPlayerUrl( streamer.name, true ) ) {
-                            if ( ! streamsChanged ) {
+                            if ( !streamsChanged ) {
                                 console.log( "Re-ordering on-deck streamers." );
                             }
                             iframes[ position ].src = twitchDeck.display.getPlayerUrl( streamer.name, true );
@@ -247,7 +242,7 @@
                 } else {
                     $.each( twitchDeck.display.streamers.slice( 1 ), function ( position, streamer ) {
                         var streamerIframe = $.grep( iframes, function ( iframe ) {
-                            return iframe.src.indexOf( 'channel=' + streamer.name ) !== - 1;
+                            return iframe.src.indexOf( 'channel=' + streamer.name ) !== -1;
                         } )[ 0 ];
                         if ( $( streamerIframe ).css( "order" ) != position ) {
                             $( streamerIframe ).css( "order", position );
@@ -324,10 +319,7 @@
              */
             loadChat: function () {
                 console.log( "Loading chat." );
-                $( '#chat-container' ).append( '<iframe id="chat-frame" class="chat-embed" scrolling="no" src="' + (twitchDeck.display.omitChat == 'true' && twitchDeck.display.streamers.length > twitchDeck.display.omitChatThreshold ? "" : "https://twitch.tv/" + twitchDeck.display.streamers[ 0 ].name + "/chat") + '"></iframe>' );
-                if ( twitchDeck.display.omitChat == 'true' && twitchDeck.display.streamers.length > twitchDeck.display.omitChatThreshold ) {
-                    $( '#chat-container' ).append( '<a id="backup_chat_link" href="http://www.twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat" target="_blank">The Chat Panel is currently disabled due to a bug in Twitch\'s API. To open this channel\'s chat room in a new tab, click here.</a>' );
-                }
+                $( '#chat-container' ).append( '<iframe id="chat-frame" class="chat-embed" scrolling="no" src="https://twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat"></iframe>' );
             },
             startTimers: function () {
                 console.log( "Startimg timers." );
