Implemented users, and created a simple sign-up form which is currently only accessible by visiting a specific url.
Switched to puma as our server, and forced SSL. This will require getting an SSL certificate for the web site.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
     <meta itemprop="description" content="Watch multiple Twitch.tv streamers at once. Let TwitchDeck make sure there's always something to watch, and manage the volume. Just sit back and enjoy, free and right in your browser."/>
 </head>
 <body>
-
+<% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
 <%= yield %>
 
 </body>
