--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,8 +11,12 @@
  * file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require _bootstrap-sprockets
+ *= require _bootstrap
+ *= require common
+ *= require variables
+ *= require user
+ *= require sessions
+ *= require _menu
+ *= require display
  */
-
-@import "bootstrap-sprockets";
-@import "bootstrap";
