User login/logout/signup is now fully-functional. Next step: User panel needs to give a way to add and switch streamer priority.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -57,6 +57,11 @@
             // Resize the on-deck streams at startup to maintain aspect ratio.
             twitchDeck.display.resizeOnDeckStreams();
         }
+
+        // Hide any alert messages at the top
+        setTimeout( function () {
+            $( '.alert' ).fadeOut( 1000 );
+        }, 10000 )
     } );
 </script>
 </body>
