--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div id="landing-container">
+    <%= render 'partials/main_menu' %>
     <div class="landing-buffer"></div>
     <div class="landing-box">
         <h1>Welcome to TwitchDeck!</h1>
@@ -15,8 +16,10 @@
         <span style="text-decoration: underline;"><%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/</span>
         followed by
         <span style="text-decoration: underline;">the streamers you want to watch, separated by '&' characters</span>.
-        <h3>Here's an example:</h3>
-        <i><a id="demo-link" href="<%= @example_link_href %>"><%= @example_link_href %></a></i>
+        <% if @example_link_href.present? %>
+            <h3>Here's an example:</h3>
+            <i><a id="demo-link" href="<%= @example_link_href %>"><%= @example_link_href %></a></i>
+        <% end %>
     </div>
     <div class="landing-buffer"></div>
 </div>
