--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -1,22 +1,36 @@
 <div class="menu">
-    BETA -
-    <a class="facebook" id="facebook_share" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank">
-        <i class="fa fa-facebook-square"></i>
-    </a>
-    <a class="twitter" id="twitter_share" title="Tweet about TwitchDeck" href="https://twitter.com/intent/tweet?" target="_blank">
-        <i class="fa fa-twitter-square"></i>
-    </a>
-    <a id="google_plus_share" title="Share on Google+" href="https://plus.google.com/share?url=" target="_blank">
-        <i class="fa fa-google-plus-square"></i>
-    </a>
-    <a id="pinterest_share" title="Pin this TwitchDeck" href="http://pinterest.com/pin/create/button/?media=http://www.authormedia.com/wp-content/uploads/2013/04/pinterest_badge_red.png&" class="pin-it-button" count-layout="horizontal" target="_blank">
-        <i class="fa fa-pinterest-square"></i>
-    </a>
-    <a id="email_share" title="Email this TwitchDeck to a friend" target="_blank">
-        <i class="fa fa-envelope"></i>
-    </a>
-    - <a id="theater_mode_toggle" class="pointer" title="Display only the main stream, with a shrunken chat panel.">Theater Mode</a>
-    - <a id="hide_chat_toggle" class="pointer">Hide Chat</a>
-    - <a id="login">Login</a>
-    - <%= link_to 'Help', help_path, target: '_blank' %>
+    <ul id="display-menu">
+        <li class="no-bullet">BETA</li>
+        <li>
+            <a id="facebook_share" class="facebook" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank"><i class="fa fa-facebook-square"></i></a>
+        </li>
+        <li class="no-bullet">
+            <a id="twitter_share" class="twitter" title="Tweet about TwitchDeck" href="https://twitter.com/intent/tweet?" target="_blank"><i class="fa fa-twitter-square"></i></a>
+        </li>
+        <li class="no-bullet">
+            <a id="google_plus_share" title="Share on Google+" href="https://plus.google.com/share?url=" target="_blank"><i class="fa fa-google-plus-square"></i></a>
+        </li>
+        <li class="no-bullet">
+            <a id="pinterest_share" title="Pin this TwitchDeck" href="http://pinterest.com/pin/create/button/?media=http://www.authormedia.com/wp-content/uploads/2013/04/pinterest_badge_red.png&" class="pin-it-button" count-layout="horizontal" target="_blank"><i class="fa fa-pinterest-square"></i></a>
+        </li>
+        <li class="no-bullet">
+            <a id="email_share" title="Email this TwitchDeck to a friend" target="_blank"><i class="fa fa-envelope"></i></a>
+        </li>
+        <li>
+            <a id="theater_mode_toggle" class="pointer" title="Display only the main stream, with a shrunken chat panel.">Theater
+                Mode</a></li>
+        <li><a id="hide_chat_toggle" class="pointer">Hide Chat</a></li>
+        <li><%= link_to 'Help', help_path, target: '_blank' %></li>
+        <% if logged_in? %>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %><b class="caret"></b></a>
+                <ul class="dropdown-menu pull-right">
+                    <li><%= link_to 'Profile', current_user %></li>
+                    <li><%= link_to 'Log out', logout_path, method: 'delete' %></li>
+                </ul>
+            </li>
+        <% else %>
+            <li class="dropdown"><%= link_to 'Login', login_path %></li>
+        <% end %>
+    </ul>
 </div>
