--- a/app/views/display/help.html.erb
+++ b/app/views/display/help.html.erb
@@ -27,6 +27,9 @@
         streams on-page first by whether they're online or offline, then by the priority you specify.</p>
     <p>In this example, once Day[9]'s stream goes offline, TwitchDeck will check the other streams, and if either
         are online, it will take the main stream over and move Day[9]'s stream to the deck.</p>
+    <p>You can also register for a free account. This will let you store your favorite streamers and quickly load up
+        TwitchDeck with those streamers without having to enter them into the address bar every time. You can re-order
+        your preferred streamers in an easy-to-use UI in your profile page.</p>
 
     <h3>Do I have to pay to use TwitchDeck?</h3>
     <p>No! TwitchDeck is, and will always remain, free. I created TwitchDeck to give the Twitch community and myself a
