--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -12,6 +12,8 @@
     <div class="landing-box">
         <h1>Welcome to TwitchDeck!</h1>
         <h3>Ready to get started?</h3>
+        Hit the "Login" link in the top-right corner to log in or register.
+        <h4>OR</h4>
         In your URL bar above, type in
         <span style="text-decoration: underline;"><%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>/player/</span>
         followed by
