--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_self
  *= require _bootstrap-sprockets
  *= require _bootstrap
+ *= require jquery-ui
  *= require common
  *= require variables
  *= require user
