--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'variables';
 
 /* Forms */
 
@@ -29,5 +30,53 @@ input {
     @extend .has-error;
     .form-control {
         color: $state-danger-text;
+    }
+}
+
+body.dragging, body.dragging * {
+    cursor: move !important;
+}
+
+.dragged {
+    position: absolute;
+    opacity: 0.5;
+    z-index: 2000;
+}
+
+ol.vertical {
+    margin: 0 0 9px 0;
+    min-height: 10px;
+
+    li {
+        display: block;
+        margin: 5px;
+        padding: 5px;
+        border: 1px solid #CCC;
+        color: $light-purple;
+        background: #333;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        li .placeholder {
+            position: relative;
+            margin: 0;
+            padding: 0;
+            border: none;
+
+            &:before {
+                position: absolute;
+                content: "";
+                width: 0;
+                height: 0;
+                margin-top: -5px;
+                left: -5px;
+                top: -4px;
+                border: 5px solid transparent;
+                border-left-color: red;
+                border-right: none;
+            }
+        }
     }
 }
