--- a/app/views/partials/_main_menu.html.erb
+++ b/app/views/partials/_main_menu.html.erb
@@ -5,7 +5,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
                 <ul class="dropdown-menu pull-right">
-                    <li><%= link_to 'Profile', current_user %></li>
+                    <li><%= link_to 'Profile', '/profile' %></li>
                     <li><%= link_to 'Log out', logout_path, method: 'delete' %></li>
                 </ul>
             </li>
