Refactored user update method to use flashes and redirects.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -51,12 +51,12 @@
                 streamers: new_streamers
             },
             success: function () {
-                alert( "Update successful." );
-                $( '#save-streamers' ).prop( 'disabled', false );
+//                alert( "Update successful." );
+//                $( '#save-streamers' ).prop( 'disabled', false );
             },
             fail: function () {
-                alert( "Updated failed, please try again." );
-                $( '#save-streamers' ).prop( 'disabled', false );
+//                alert( "Updated failed, please try again." );
+//                $( '#save-streamers' ).prop( 'disabled', false );
             }
         } );
     } );
