Updated http to https.

--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -201,7 +201,7 @@
              * Returns a Twitch player URL, filling in the given values of the streamer name and muted flag.
              */
             getPlayerUrl: function ( name, muted ) {
-                return 'http://player.twitch.tv/?channel=' + name + '&auto_play=true&muted=' + muted + '';
+                return 'https://player.twitch.tv/?channel=' + name + '&auto_play=true&muted=' + muted + '';
             },
 
             /*
