--- a/app/views/display/help.html.erb
+++ b/app/views/display/help.html.erb
@@ -22,7 +22,7 @@
     <p>Enter the names of the streamers you'd like to watch, in order of priority. For instance:
         <b><%= ENV['CANONICAL_HOST'] || 'localhost:3000' %>
             /player/day9tv&covert_muffin&kinggothalion&professorbroman&riotgames</b> will display
-        <a href="http://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, the others in smaller streams
+        <a href="https://www.twitch.tv/day9tv">Day[9]</a>'s stream in the main player, the others in smaller streams
         below it. TwitchDeck will order the
         streams on-page first by whether they're online or offline, then by the priority you specify.</p>
     <p>In this example, once Day[9]'s stream goes offline, TwitchDeck will check the other streams, and if either
