--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <!-- Facebook Tags -->
     <meta property="og:title" content="TwitchDeck - the Smarter Stream Player"/>
     <meta property="og:description" content="Watch multiple Twitch.tv streamers at once. Let TwitchDeck make sure there's always something to watch, and manage the volume. Just sit back and enjoy, free and right in your browser."/>
-    <meta property="og:url" content="http://twitch-deck.herokuapp.com/"/>
+    <meta property="og:url" content="https://www.twitchdeck.io"/>
 
     <!-- Google+ Tags -->
     <meta itemprop="name" content="TwitchDeck - The Smarter Stream Player"/>
