Removed loadChat method from TwitchDeck JS. Moved iframe right into the page.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -35,6 +35,7 @@
                     <option value="<%= streamer['name'] %>"><%= streamer['name'] %></option>
                 <% end %>
             </select>
+            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="https://twitch.tv/<%= @streamers.first['name'] %>/chat"></iframe>
         </div>
     </div>
     <div id="stream-queue" class="flex_row">
@@ -50,7 +51,6 @@
     $( document ).ready( function () {
         console.log( "Document is ready. Initializing Javascript." );
         twitchDeck.display.initialize( '<%= @streamers.to_json.html_safe %>' );
-        twitchDeck.display.loadChat();
         twitchDeck.display.startTimers();
 
         if ( twitchDeck.display.streamers.length > 4 ) {
