Changed chat iframes back into http in the vain hope that some users might get to open the chat panel.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -35,7 +35,7 @@
                     <option value="<%= streamer['name'] %>"><%= streamer['name'] %></option>
                 <% end %>
             </select>
-            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="https://twitch.tv/<%= @streamers.first['name'] %>/chat"></iframe>
+            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="http://twitch.tv/<%= @streamers.first['name'] %>/chat"></iframe>
         </div>
     </div>
     <div id="stream-queue" class="flex_row">
