Added an "open chat" button to the UI.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -5,6 +5,10 @@
 // ====== //
 // Normal //
 // ====== //
+a.button {
+    @extend span.button;
+}
+
 a, a:link, a:visited, a:active {
     color: $light-purple;
     text-decoration: none;
