--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -66,8 +66,9 @@
 
                 // Swap a different chat window whenever the drop-down box changes.
                 $( '#chat-changer' ).change( function () {
-                    $( '#chat-frame' )[ 0 ].src = 'https://twitch.tv/' +
-                        $( '#chat-changer option:selected' ).text() + '/chat';
+                    var selectedOption = $( '#chat-changer option:selected' ).text();
+                    $( '#chat-frame' ).attr( 'src', 'https://twitch.tv/' + selectedOption + '/chat' );
+                    $( 'a#open-chat' ).attr( 'href', 'https://twitch.tv/' + selectedOption + '/chat' );
                 } );
 
                 // Depending on the number of streamers selected, change the layout for optimal viewing.
