--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -30,12 +30,16 @@
             <% end %>
         </div>
         <div id="chat-container">
-            <select id="chat-changer">
-                <% @streamers.each do |streamer| %>
-                    <option value="<%= streamer['name'] %>"><%= streamer['name'] %></option>
-                <% end %>
-            </select>
-            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="http://twitch.tv/<%= @streamers.first['name'] %>/chat"></iframe>
+            <div class="flex_row">
+                <select id="chat-changer" style="flex: 1;">
+                    <% @streamers.each do |streamer| %>
+                        <option value="<%= streamer['name'] %>"><%= streamer['name'] %></option>
+                    <% end %>
+                </select>
+                <a id="open-chat" class="button" href="https://www.twitch.tv/<%= @streamers.first['name'] %>/chat" target="_blank" style="flex: 0 0 auto;">Open
+                    Chat</a>
+            </div>
+            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="https://twitch.tv/<%= @streamers.first['name'] %>/chat"></iframe>
         </div>
     </div>
     <div id="stream-queue" class="flex_row">
