--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, 'Forgot password' %>
-<div style="width: 80%;">
+<div class="container">
     <h1>Forgot password</h1>
 
     <div class="row">
