--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div style="width: 80%;">
+<div class="container">
     <% provide :title, 'Edit user' %>
     <%= gravatar_for @user %> <%= @user.email %>
 
