--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, 'Forgot password' %>
-<div class="container">
+<div class="container" style="width: 90%;">
     <h1>Forgot password</h1>
 
     <div class="row">
