--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 90%;">
     <% provide :title, 'Edit user' %>
     <%= gravatar_for @user %> <%= @user.email %>
 
