Fixed weird streamer list display.

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -45,6 +45,7 @@ body.dragging, body.dragging * {
 
 ol.vertical {
     margin: 0 0 9px 0;
+    margin-left: -45px;
     min-height: 10px;
 
     li {
