Added a buffer to the top of the user profile page.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="width: 90%;">
+<div class="container" style="width: 90%; margin-top: 50px;">
     <% provide :title, 'Edit user' %>
     <%= gravatar_for @user %> <%= @user.email %>
 
