--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -39,7 +39,7 @@
                 <a id="open-chat" class="button" href="https://www.twitch.tv/<%= @streamers.first['name'] %>/chat" target="_blank" style="flex: 0 0 auto;">Open
                     Chat</a>
             </div>
-            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="https://twitch.tv/<%= @streamers.first['name'] %>/chat"></iframe>
+            <iframe id="chat-frame" class="chat-embed" scrolling="no" src="https://www.google.com/search?q=%http://twitch.tv/<%= @streamers.first['name'] %>/chat&btnI=Im+Feeling+Lucky"></iframe>
         </div>
     </div>
     <div id="stream-queue" class="flex_row">
