Implemented redirector, whose job is to change iframe sources to redirect to twitch chat with the given user name. Also changed "Open Chat" button to show "Popout Chat" instead. Finally, removed all the excess commented-out stuff from routes.rb.

--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -67,7 +67,7 @@
                 // Swap a different chat window whenever the drop-down box changes.
                 $( '#chat-changer' ).change( function () {
                     var selectedOption = $( '#chat-changer option:selected' ).text();
-                    $( '#chat-frame' ).attr( 'src', 'https://www.google.com/search?q=%http://twitch.tv/' + selectedOption + '/chat&btnI=Im+Feeling+Lucky' );
+                    $( '#chat-frame' ).attr( 'src', '/redirect?streamer=' + selectedOption );
                     $( 'a#open-chat' ).attr( 'href', 'https://twitch.tv/' + selectedOption + '/chat' );
                 } );
 
@@ -217,7 +217,7 @@
                     $( '#main-stream-player' ).attr( 'src',
                         twitchDeck.display.getPlayerUrl( twitchDeck.display.streamers[ 0 ].name, false ) );
                     $( '#chat-frame' ).attr( 'src',
-                        'https://www.google.com/search?q=%http://twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat&btnI=Im+Feeling+Lucky' );
+                        '/redirect?streamer=' + twitchDeck.display.streamers[ 0 ].name );
 
                     streamsChanged = true;
                 }
