--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -217,7 +217,8 @@
                     $( '#main-stream-player' ).attr( 'src',
                         twitchDeck.display.getPlayerUrl( twitchDeck.display.streamers[ 0 ].name, false ) );
                     $( '#chat-frame' ).attr( 'src',
-                        'https://twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat' );
+                        'https://www.twitch.tv/' + twitchDeck.display.streamers[ 0 ].name + '/chat' );
+
                     streamsChanged = true;
                 }
 
