Fixed a bug where turning off theater mode would make streams short when fewer than 5 streamers were entered. User profile page now checks to see if the streamer they entered exists, and gives an error if not. Tweaked some little things here and there too.

--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -38,7 +38,7 @@
                 // Called when the "Theater Mode" button is pressed.
                 $( '#theater_mode_toggle' ).click( function () {
                     if ( $( '#theater_mode_toggle' ).hasClass( 'theater_mode_active' ) ) {
-                        twitchDeck.display.resizeOnDeckStreams();
+                        if ( twitchDeck.display.streamers.length > 4 ) twitchDeck.display.resizeOnDeckStreams();
                         $( '#theater_mode_toggle' ).removeClass( 'theater_mode_active' );
                         $( '#stream-queue' ).removeClass( 'theater' );
                         $( '#main-stream-container' ).removeClass( 'theater' );
