--- a/app/views/display/help.html.erb
+++ b/app/views/display/help.html.erb
@@ -33,7 +33,7 @@
         sharing links in the player page are a great way to do this!</p>
 
     <h3>Where can I get updates, request features, or report a problem?</h3>
-    <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %></p>
+    <p>Check out the TwitchDeck subreddit at <%= link_to 'r/twitchdeck', 'http://www.reddit.com/r/twitchdeck' %>.</p>
 
     <h1>Terms of Service</h1>
     <p><b>Last updated November 29, 2015.</b></p>
