Removed beta labels! We are LIVE baby!

--- a/app/views/display/help.html.erb
+++ b/app/views/display/help.html.erb
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="margin: 0 10% 0 10%;">
-    <h1>Welcome to the TwitchDeck Beta!</h1>
+    <h1>Welcome to TwitchDeck!</h1>
     <h3>What is TwitchDeck?</h3>
     <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. TwitchDeck
         displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players.
