Fixed previous commit.

--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="menu">
     <ul id="display-menu">
-        <li>
+        <li class="no-bullet">
             <a id="facebook_share" class="facebook" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank"><i class="fa fa-facebook-square"></i></a>
         </li>
         <li class="no-bullet">
