--- a/app/views/partials/_main_menu.html.erb
+++ b/app/views/partials/_main_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="menu">
     <ul id="display-menu">
         <% if logged_in? %>
-            <li class="dropdown">
+            <li class="dropdown no-bullet">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
                 <ul class="dropdown-menu pull-right">
                     <li><%= link_to 'Profile', '/profile' %></li>
@@ -9,7 +9,7 @@
                 </ul>
             </li>
         <% else %>
-            <li><%= link_to 'Login', login_path %></li>
+            <li class="no-bullet"><%= link_to 'Login', login_path %></li>
         <% end %>
         <li><%= link_to 'Help', help_path, target: '_blank' %></li>
     </ul>
