--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -22,8 +22,7 @@
         <li><%= link_to 'Help', help_path, target: '_blank' %></li>
         <% if logged_in? %>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %>
-                    <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
                 <ul class="dropdown-menu pull-right">
                     <li><%= link_to 'Profile', '/profile' %></li>
                     <li><%= link_to 'Log out', logout_path, method: 'delete' %></li>
