--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -1,5 +1,6 @@
 <div class="menu">
     <ul id="display-menu">
+        <li class="no-bullet" style="color: #111;">_</li>
         <li class="no-bullet">
             <a id="facebook_share" class="facebook" title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank"><i class="fa fa-facebook-square"></i></a>
         </li>
@@ -22,7 +23,8 @@
         <li><%= link_to 'Help', help_path, target: '_blank' %></li>
         <% if logged_in? %>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %>
+                    <b class="caret"></b></a>
                 <ul class="dropdown-menu pull-right">
                     <li><%= link_to 'Profile', '/profile' %></li>
                     <li><%= link_to 'Log out', logout_path, method: 'delete' %></li>
