Added www to chat changer links.

--- a/app/assets/javascripts/twitchdeck.js.erb
+++ b/app/assets/javascripts/twitchdeck.js.erb
@@ -67,8 +67,8 @@
                 // Swap a different chat window whenever the drop-down box changes.
                 $( '#chat-changer' ).change( function () {
                     var selectedOption = $( '#chat-changer option:selected' ).text();
-                    $( '#chat-frame' ).attr( 'src', 'https://twitch.tv/' + selectedOption + '/chat' );
-                    $( 'a#open-chat' ).attr( 'href', 'https://twitch.tv/' + selectedOption + '/chat' );
+                    $( '#chat-frame' ).attr( 'src', 'https://www.twitch.tv/' + selectedOption + '/chat' );
+                    $( 'a#open-chat' ).attr( 'href', 'https://www.twitch.tv/' + selectedOption + '/chat' );
                 } );
 
                 // Depending on the number of streamers selected, change the layout for optimal viewing.
