--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -86,6 +86,7 @@ body, html {
     min-height: 100%;
     height: 100%;
     max-height: 100%;
+    font-size: 1.1rem;
 
     &.noscroll {
         overflow-y: hidden;
